# rayzin

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/rayzin/: __init__.py  enums.py  metrics.py  pipeline.py  schema.py  selectors.py  types.py
src/rayzin/manifest/: __init__.py  build.py  filtering.py  schema.py  spatial.py
src/rayzin/readers/: __init__.py  cog_reader.py  protocol.py  zarr_layout.py  zarr_reader.py
src/rayzin/search/: __init__.py  block_searcher.py  heap_actor.py  results.py
src/rayzin/search/backends/: __init__.py  faiss.py  numpy.py  protocols.py
tests/unit/: conftest.py  test_metrics.py  test_pipeline.py  test_selectors.py
tests/unit/manifest/: test_build.py  test_filtering.py  test_spatial.py
tests/unit/readers/: test_zarr_reader.py
tests/unit/search/: test_backends.py  test_block_searcher.py  test_heap.py
