[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rayzin"
version = "0.1.0a0"
description = "Exact KNN search over massive Zarr/COG datasets using Ray Data"
requires-python = ">=3.11"
dependencies = [
    "ray[data]>=2.30.0",
    "zarr>=3.0.0",
    "pyarrow>=16.0.0",
    "numpy>=1.26.0",
    "obstore>=0.6",
    "shapely>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rayzin"]

# ---------------------------------------------------------------------------
# Pixi workspace
# faiss is conda-first: https://github.com/facebookresearch/faiss/blob/main/INSTALL.md
# ---------------------------------------------------------------------------

[tool.pixi.workspace]
channels = ["pytorch", "conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
rayzin = { path = ".", editable = true }
ray = { version = ">=2.30.0", extras = ["data"] }
zarr = ">=3.0.0"
pyarrow = ">=16.0.0"
numpy = ">=1.26.0"
obstore = ">=0.6"
shapely = ">=2.0.0"

# ---------------------------------------------------------------------------
# Features
# ---------------------------------------------------------------------------

# CPU-only faiss — pytorch channel, all platforms
[tool.pixi.feature.faiss-cpu.dependencies]
faiss-cpu = ">=1.7"

# GPU faiss — pytorch + nvidia channels, linux-64 only (CUDA requirement)
[tool.pixi.feature.faiss-gpu]
channels = ["nvidia"]
platforms = ["linux-64"]

[tool.pixi.feature.faiss-gpu.dependencies]
faiss-gpu = ">=1.7"

# COG reader — rasterio + rioxarray via PyPI
[tool.pixi.feature.cog.pypi-dependencies]
rasterio = ">=1.3.0"
rioxarray = ">=0.15.0"

# Dev tooling
[tool.pixi.feature.dev.pypi-dependencies]
pytest = ">=8.0.0"
mypy = ">=1.10.0"
ruff = ">=0.4.0"
pre-commit = ">=3.0.0"

# ---------------------------------------------------------------------------
# Environments
# ---------------------------------------------------------------------------

[tool.pixi.environments]
default = { solve-group = "default" }
cpu = { features = ["faiss-cpu"], solve-group = "default" }
gpu = { features = ["faiss-gpu"], solve-group = "gpu" }
dev = { features = ["dev", "faiss-cpu"], solve-group = "default" }
dev-cog = { features = ["dev", "faiss-cpu", "cog"], solve-group = "default" }

# ---------------------------------------------------------------------------
# Ruff / Mypy
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["rayzin"]

[tool.mypy]
python_version = "3.11"
strict = true
